Fix datagrid filtering with select component type, fix alert z-index

--- a/src/alerts/alerts.scss
+++ b/src/alerts/alerts.scss
@@ -3,7 +3,7 @@
 
 #global-notification {
     position:absolute;
-    z-index: 2;
+    z-index: 10000;
     bottom: 15%;
     width: 100%;
     left:50%;
